# wakatime-sync

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py  pyproject.toml
src/: main.c  redirect.c  redirect.h  string_utils.c  string_utils.h
